--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-fastapi
-uvicorn
-chromadb
-langchain
+fastapi==0.115.2
+uvicorn==0.31.1
+chromadb==0.5.13
+langchain==0.3.3
 langchain_chroma==0.1.4
-langchain-community
-python-dotenv
-transformers
-sentence-transformers
-torch
+langchain-community==0.3.2
+langchain_huggingface==0.1.0
+python-dotenv==1.0.1
+transformers==4.45.2
+sentence-transformers # required for HuggingFaceBgeEmbeddings
+torch==2.4.1
 pypdf==5.0.1
 psutil==6.0.0
 python-multipart==0.0.12
+graypy==2.1.0
+
