--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   mongodb:
     image: "mongo:6.0.18"
@@ -65,6 +63,9 @@ services:
       GRAYLOG_TRANSPORT_EMAIL_USE_AUTH: "false"
       GRAYLOG_TRANSPORT_EMAIL_USE_TLS: "false"
       GRAYLOG_TRANSPORT_EMAIL_USE_SSL: "false"
+      GRAYLOG_CONTENT_PACKS_AUTO_INSTALL: "gelf-udp-input.json"
+      GRAYLOG_CONTENT_PACKS_LOADER_ENABLED: "true"
+      GRAYLOG_CONTENT_PACKS_DIR: "data/contentpacks"
     ports:
       # Graylog web interface and REST API
       - "9000:9000/tcp"
@@ -89,6 +90,8 @@ services:
       - "graylog_data:/usr/share/graylog/data/data"
       - "graylog_config:/usr/share/graylog/data/config"
       - "graylog_journal:/usr/share/graylog/data/journal"
+      - "./graylog.conf:/usr/share/graylog/data/config/graylog.conf"
+      - "./gelf-udp-input.json:/usr/share/graylog/data/contentpacks/gelf-udp-input.json"
 
 networks:
   graylog:
