--- a/chatservice/Dockerfile
+++ b/chatservice/Dockerfile
@@ -9,8 +9,12 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update && apt-get install -y curl
+
 COPY . /app
 
 EXPOSE 8000
 
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+
+HEALTHCHECK --interval=1m CMD curl -f  http://localhost:8000/system-metrics || exit 1
