--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ include:
 services:
   chatservice:
     build: ./chatservice
-    image: chatservice_img
+    image: ivllt/chatservice_img
     ports:
       - "8000:8000"
     networks:
