--- a/chatservice/requirements.txt
+++ b/chatservice/requirements.txt
@@ -7,8 +7,7 @@ langchain-community==0.3.2
 langchain_huggingface==0.1.0
 python-dotenv==1.0.1
 transformers==4.45.2
-sentence-transformers # required for HuggingFaceBgeEmbeddings
-torch==2.4.1
+sentence-transformers==3.2.0 # required for HuggingFaceBgeEmbeddings
 pypdf==5.0.1
 psutil==6.0.0
 python-multipart==0.0.12
